syntax = "proto3";

package pb;
option go_package = "github.com/byebyebruce/natsrpc/example/pb;pb";

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
